fix css bad alignment in navbar

--- a/tp_final/DirectorioEmpresas/modules/core/client/css/styles.css
+++ b/tp_final/DirectorioEmpresas/modules/core/client/css/styles.css
@@ -24,6 +24,20 @@ a:hover{
   border-color:transparent;
 }
 
+#custom-navbar {
+  display: flex !important;
+  align-items: flex-end;
+}
+
+.custom-navbar-left{
+  flex-grow: 1;
+}
+
+.custom-navbar-right{
+  margin:0;
+}
+
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
